Add repository singleton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">android-mvvm-template</string>
+    <!-- Error message -->
+    <string name="err_title">Oops!</string>
+    <string name="err_network">Network error, unable to load data, please try again!</string>
+    <string name="err_no_internet">Slow or no internet connection. Please check your internet settings</string>
+    <string name="err_token_expired">Token has expired, please login again</string>
+    <string name="err_invalid_credentials">Username or password is wrong, please try again</string>
+    <string name="err_forbidden_access">You don\'t have access rights</string>
 </resources>
